Fix horizontal spacing in reports sidebar

--- a/less/modules/reports.less
+++ b/less/modules/reports.less
@@ -30,6 +30,12 @@
 	}
 }
 
+.report-dates {
+	input {
+		margin-bottom: 0;
+	}
+}
+
 .report-filters {
 	.btn {
 		border-right: 0;
